<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".Caesar_Cipher">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/header_caesar_cipher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/caesar_cipher"
                android:textColor="@color/colorAccent"
                android:textSize="26sp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/text_caesar_cipher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/header_caesar_cipher"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:hint="@string/enter_the_key"
                android:inputType="textMultiLine"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent"
                android:autofillHints="" />
            <EditText
                android:id="@+id/key_caesar_cipher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_caesar_cipher"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:hint="@string/enter_the_key"
                android:inputType="number"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent"
                android:autofillHints="" />
            <LinearLayout
                android:id="@+id/linear_caesar_cipher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/key_caesar_cipher"
                android:layout_margin="20dp">
                <Button
                    android:id="@+id/encryption_caesar_cipher"
                    android:layout_width="350dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/encryption"
                    android:background="@drawable/trending_background"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>
                <Button
                    android:id="@+id/decryption_caesar_cipher"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:text="@string/decryption"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@drawable/trending_background"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>
            </LinearLayout>
            <TextView
                android:id="@+id/result_caesar_cipher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear_caesar_cipher"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:hint="@string/result_of_text"
                android:inputType="textMultiLine"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent"
                tools:ignore="TextViewEdits" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/result_caesar_cipher"
                android:orientation="vertical"
                android:layout_margin="5dp"
                android:layout_marginBottom="20dp">
                <Button
                    android:id="@+id/copy_caesar_cipher"
                    android:layout_width="350dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/copy"
                    android:onClick="cp_caesar_cipher"
                    android:background="@drawable/trending_background"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:ignore="OnClick" />
                <Button
                    android:id="@+id/reset_caesar_cipher"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rest"
                    android:onClick="reset_caesar_cipher"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@drawable/trending_background"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:ignore="OnClick" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>