<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Binary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/header_binary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/binary"
                android:textSize="26sp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"/>

            <EditText
                android:id="@+id/text_binary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/header_binary"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:hint="@string/enter_the_text_only"
                android:inputType="text"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent"
                android:autofillHints="" />

            <LinearLayout
                android:id="@+id/linear_binary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/text_binary"
                android:layout_margin="20dp">

                <Button
                    android:id="@+id/encryption_binary"
                    android:layout_width="350dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/encryption"
                    android:background="@drawable/trending_background"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>
                <Button
                    android:id="@+id/decryption_binary"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:text="@string/decryption"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@drawable/trending_background"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/result_binary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear_binary"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:hint="Result of Text"
                android:inputType="textMultiLine"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent"
                tools:ignore="TextViewEdits" />

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/result_binary"
                android:orientation="vertical"
                android:layout_margin="5dp"
                android:layout_marginBottom="20dp"
                >

                <Button
                    android:id="@+id/copy_binary"
                    android:layout_width="350dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/copy"
                    android:onClick="cp_binary"
                    android:background="@drawable/trending_background"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:ignore="OnClick" />
                <Button
                    android:id="@+id/reset_binary"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rest"
                    android:onClick="reset_binary"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@drawable/trending_background"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:ignore="OnClick" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>