<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/trending_background"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/ss"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_marginTop="100dp"
            android:layout_height="wrap_content">
          <LinearLayout
              android:id="@+id/linera_heading"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"

              android:orientation="vertical">
              <TextView
                  android:layout_width="match_parent"
                  android:layout_height="50dp"
                  android:layout_marginStart="20dp"
                  android:gravity="center"
                  android:text="@string/crytography_appilcation"
                  android:textColor="@android:color/white"
                  android:textSize="20sp" />

          </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_aes"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_marginTop="90dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toStartOf="@id/card_vc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/main_aes"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:contentDescription="@string/app_name"
                    android:padding="2dp"
                    android:src="@drawable/aes"
                    android:focusable="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:gravity="center"
                    android:text="@string/aes"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_vc"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_marginTop="90dp"

                android:background="@drawable/white_rectangle_background"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintStart_toEndOf="@id/card_aes"
                android:padding="15dp"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >

                <ImageView
                    android:id="@+id/main_vc"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:clickable="true"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/vc"
                    android:focusable="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/vigenere_cipher"
                    android:layout_marginTop="100dp"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:textStyle="bold"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_cc"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_marginTop="22dp"
                android:background="@drawable/white_rectangle_background"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@id/card_vc"
                android:padding="15dp"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_aes"
                >
                <ImageView
                    android:id="@+id/main_cc"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:clickable="true"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/caesarcipher"
                    android:focusable="true" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/caesar_cipher"
                    android:layout_marginTop="100dp"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_binary"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_marginTop="22dp"
                android:background="@drawable/white_rectangle_background"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintStart_toEndOf="@id/card_aes"
                android:padding="15dp"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_vc"
                >
                <ImageView
                    android:id="@+id/main_binary"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_margin="8dp"
                    android:clickable="true"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/bin"
                    android:focusable="true" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/binary"
                    android:layout_marginTop="100dp"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

            </androidx.cardview.widget.CardView>



        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>